--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -5,22 +5,22 @@ html {
 
   @media (prefers-color-scheme: light) {
     &:not([data-mode]),
-    &[data-mode='light'] {
+    &[data-mode="light"] {
       @include light-scheme;
     }
 
-    &[data-mode='dark'] {
+    &[data-mode="dark"] {
       @include dark-scheme;
     }
   }
 
   @media (prefers-color-scheme: dark) {
     &:not([data-mode]),
-    &[data-mode='dark'] {
+    &[data-mode="dark"] {
       @include dark-scheme;
     }
 
-    &[data-mode='light'] {
+    &[data-mode="light"] {
       @include light-scheme;
     }
   }
@@ -98,7 +98,7 @@ blockquote {
     margin-bottom: 0;
   }
 
-  &[class^='prompt-'] {
+  &[class^="prompt-"] {
     border-left: 0;
     position: relative;
     padding: 1rem 1rem 1rem 3rem;
@@ -117,10 +117,10 @@ blockquote {
     }
   }
 
-  @include prompt('tip', '\f0eb', $fa-style: 'regular');
-  @include prompt('info', '\f06a', $rotate: 180);
-  @include prompt('warning', '\f06a');
-  @include prompt('danger', '\f071');
+  @include prompt("tip", "\f0eb", $fa-style: "regular");
+  @include prompt("info", "\f06a", $rotate: 180);
+  @include prompt("warning", "\f06a");
+  @include prompt("danger", "\f071");
 }
 
 kbd {
@@ -324,10 +324,12 @@ sup {
 /* --- post --- */
 
 .preview-img {
-  aspect-ratio: 40 / 21;
+  aspect-ratio: 40 / 20;
   width: 100%;
   height: 100%;
   overflow: hidden;
+  display: flex;
+  align-items: center;
 
   @extend %rounded;
 
@@ -337,8 +339,9 @@ sup {
 
   img {
     height: 100%;
-    -o-object-fit: cover;
-    object-fit: cover;
+
+    -o-object-fit: contain;
+    object-fit: contain;
 
     @extend %rounded;
 
@@ -358,7 +361,7 @@ sup {
   &::before {
     @extend %rounded;
 
-    content: '';
+    content: "";
     width: 100%;
     height: 100%;
     position: absolute;
@@ -481,7 +484,7 @@ main {
       }
     }
 
-    input[type='checkbox'] {
+    input[type="checkbox"] {
       margin: 0 0.5rem 0.2rem -1.3rem;
       vertical-align: middle;
     }
@@ -530,13 +533,13 @@ main {
   background: var(--img-bg);
 
   &::before {
-    content: '';
+    content: "";
     position: absolute;
     background: var(--shimmer-bg);
     height: 100%;
     width: 100%;
-    -webkit-animation: shimmer 1.3s infinite;
-    animation: shimmer 1.3s infinite;
+    -webkit-animation: shimmer 15s infinite;
+    animation: shimmer 15s infinite;
   }
 
   @-webkit-keyframes shimmer {
@@ -675,7 +678,7 @@ mjx-container {
 
 /* --- sidebar layout --- */
 
-$sidebar-display: 'sidebar-display';
+$sidebar-display: "sidebar-display";
 $btn-border-width: 3px;
 $btn-mb: 0.5rem;
 
@@ -740,7 +743,7 @@ $btn-mb: 0.5rem;
   .site-title {
     font-family: inherit;
     font-weight: 900;
-    font-size: 1.75rem;
+    font-size: 1.6rem;
     line-height: 1.2;
     letter-spacing: 0.25px;
     margin-top: 1.25rem;
@@ -868,7 +871,7 @@ $btn-mb: 0.5rem;
       @include ml-mr(calc(($sb-btn-gap - $btn-border-width) / 2));
 
       background-color: var(--sidebar-btn-color);
-      content: '';
+      content: "";
       width: $btn-border-width;
       height: $btn-border-width;
       border-radius: 50%;
@@ -926,7 +929,7 @@ $btn-mb: 0.5rem;
     span {
       &:not(:last-child) {
         &::after {
-          content: '›';
+          content: "›";
           padding: 0 0.3rem;
         }
       }
@@ -1033,7 +1036,7 @@ search {
     margin: 0 1.25rem 1rem 0;
 
     &::before {
-      content: '#';
+      content: "#";
       color: var(--text-muted-color);
       padding-right: 0.2rem;
     }
@@ -1231,7 +1234,7 @@ search {
 @media all and (max-width: 576px) {
   main {
     .content {
-      > blockquote[class^='prompt-'] {
+      > blockquote[class^="prompt-"] {
         @include ml-mr(-1rem);
 
         border-radius: 0;
