--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -33,8 +33,8 @@ tail_includes:
       </span>
       {% endif %} {% if page.image %} {% capture src %}src="{{ page.image.path |
       default: page.image }}"{% endcapture %} {% capture class
-      %}class="preview-img{% if page.image.no_bg %}{{ ' no-bg' }}{% endif %}"{%
-      endcapture %} {% capture alt %}alt="{{ page.image.alt | xml_escape |
+      %}class="preview-img-post{% if page.image.no_bg %}{{ ' no-bg' }}{% endif
+      %}"{% endcapture %} {% capture alt %}alt="{{ page.image.alt | xml_escape |
       default: "Preview Image" }}"{% endcapture %} {% if page.image.lqip %} {%-
       capture lqip -%}lqip="{{ page.image.lqip }}"{%- endcapture -%} {% endif %}
 
