--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -350,6 +350,34 @@ sup {
     }
   }
 }
+.preview-img-post {
+  aspect-ratio: 40 / 20;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+
+  @extend %rounded;
+
+  &:not(.no-bg) {
+    //background: var(--img-bg);
+    background: #18181b;
+  }
+
+  img {
+    height: 100%;
+
+    -o-object-fit: contain;
+    object-fit: contain;
+
+    @extend %rounded;
+
+    @at-root #post-list & {
+      width: 100%;
+    }
+  }
+}
 
 .post-preview {
   @extend %rounded;
