--- a/_sass/colors/syntax-dark.scss
+++ b/_sass/colors/syntax-dark.scss
@@ -8,10 +8,10 @@
   --highlighter-rouge-color: #c9def1;
   --highlight-lineno-color: #808080;
   --inline-code-bg: rgba(255, 255, 255, 0.05);
-  --code-color: #b0b0b0;
+  --code-color: #c5c5c5;
   --code-header-text-color: #6a6a6a;
   --code-header-muted-color: #353535;
-  --code-header-icon-color: #565656;
+  --code-header-icon-color: #686868;
   --clipboard-checked-color: #2bcc2b;
   --filepath-text-color: #cacaca;
 
@@ -55,7 +55,7 @@
   }
 
   .highlight .nt {
-    color: #f4bf75;
+    color: rgb(122, 214, 94);
   }
 
   .highlight .o,
@@ -92,7 +92,7 @@
   }
 
   .highlight .kc {
-    color: #d28445;
+    color: #45d2c9;
   }
 
   .highlight .kt {
@@ -112,7 +112,7 @@
   .highlight .sh,
   .highlight .sx,
   .highlight .s1 {
-    color: #90a959;
+    color: #9db568;
   }
 
   .highlight .sa {
@@ -128,7 +128,7 @@
   }
 
   .highlight .se {
-    color: #b76d45;
+    color: #b745aa;
   }
 
   .highlight .nn {
