--- a/_sass/colors/typography-dark.scss
+++ b/_sass/colors/typography-dark.scss
@@ -4,14 +4,15 @@
 
 @mixin dark-scheme {
   /* Framework color */
-  --main-bg: rgb(24, 24, 27);
 
+  //--main-bg: rgb(20, 20, 20);
+  --main-bg: rgb(10, 10, 28);
   --mask-bg: rgb(68, 69, 70);
   --main-border-color: rgb(44, 45, 45);
-
+  //--main-bg: linear-gradient(85deg, rgb(14, 14, 30) 100%, rgb(24, 24, 27) 100%);
   /* Common color */
-  --text-color: rgb(169, 168, 168);
-  --text-muted-color: #a2a1a1;
+  --text-color: rgb(176, 176, 176);
+  --text-muted-color: #aeaeae;
   --text-muted-highlight-color: #aeaeae;
   --heading-color: #acacac;
   --label-color: #a7a7a7;
@@ -38,7 +39,14 @@
   /* Sidebar */
   --site-title-color: #b5b5b5;
   --site-subtitle-color: #969292;
-  --sidebar-bg: rgb(28, 28, 30);
+
+  --sidebar-bg: linear-gradient(
+    -10deg,
+    rgb(10, 10, 28) 0%,
+    rgb(10, 10, 17) 50%
+  );
+
+  //good: --sidebar-bg: rgb(12, 13, 35);
   //--sidebar-bg: rgb(20, 20, 23);
   --sidebar-border-color: #292929;
   --sidebar-muted-color: #868686;
@@ -49,7 +57,7 @@
   --avatar-border-color: rgb(206, 206, 206, 0.9);
 
   /* Topbar */
-  --topbar-bg: rgb(24, 24, 27, 0.64);
+  --topbar-bg: rgb(10, 10, 28, 0.64);
   --topbar-text-color: var(--text-color);
   --search-border-color: rgb(55, 55, 55);
   --search-icon-color: rgb(100, 102, 105);
@@ -69,7 +77,7 @@
   --footnote-target-bg: rgb(63, 81, 181);
   --btn-share-color: #6c757d;
   --btn-share-hover-color: #bfc1ca;
-  --card-bg: #1e1e1e;
+  --card-bg: #1a1919;
   --card-hovor-bg: #464d51;
   --card-shadow: rgb(21, 21, 21, 0.72) 0 6px 18px 0,
     rgb(137, 135, 135, 0.24) 0 0 0 1px;
