--- a/_sass/addon/commons.scss
+++ b/_sass/addon/commons.scss
@@ -448,6 +448,7 @@ main {
   font-size: 1.08rem;
   margin-top: 2rem;
   overflow-wrap: break-word;
+  font-family: "monospace";
 
   a {
     &.popup {
@@ -770,7 +771,7 @@ $btn-mb: 0.5rem;
   }
 
   .site-title {
-    font-family: inherit;
+    font-family: "monospace";
     font-weight: 900;
     font-size: 1.6rem;
     line-height: 1.2;
@@ -787,7 +788,8 @@ $btn-mb: 0.5rem;
   }
 
   .site-subtitle {
-    font-size: 95%;
+    font-family: "Courier New";
+    font-size: 90%;
     color: var(--site-subtitle-color);
     margin-top: 0.25rem;
     word-spacing: 1px;
@@ -801,7 +803,7 @@ $btn-mb: 0.5rem;
     margin-bottom: 2rem;
 
     li.nav-item {
-      opacity: 0.9;
+      opacity: 2;
       width: 100%;
       padding-left: 1.5rem;
       padding-right: 1.5rem;
