--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -85,7 +85,7 @@ endif %}
     search-loader.html lang=lang %}
   </body>
   <script>
-    const numStars = 100;
+    const numStars = 110;
     const starField = document.createElement("div");
     starField.className = "stars";
     document.body.appendChild(starField);
@@ -103,8 +103,10 @@ endif %}
 
       const duration = Math.random() * 5 + 7;
       star.style.animationDuration = `${duration}s`;
-
-      const delay = Math.random() * 5;
+      let delay = Math.random() * 2;
+      if (i <= 50) {
+        delay = 0;
+      }
       star.style.animationDelay = `${delay}s`;
 
       starField.appendChild(star);
