Added cloud effect

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -23,7 +23,7 @@ push: pinned[i] %} {% endfor %} {% else %} {% assign pinned_num = 0 %} {% endif
 default_num | minus: 1 %} {% if default_num > 0 %} {% for i in
 (default_beg..default_end) %} {% assign posts = posts | push: default[i] %} {%
 endfor %} {% endif %}
-
+<div class="clouds"></div>
 <div id="post-list" class="flex-grow-1 px-xl-1">
   {% for post in posts %}
   <article class="card-wrapper card">
